[gd_scene load_steps=3 format=3 uid="uid://kcxdhtmxjfxp"]

[ext_resource type="Script" path="res://settings_ui.gd" id="1_gflah"]
[ext_resource type="Script" path="res://audio_control.gd" id="2_kai7g"]

[node name="SettingsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gflah")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -197.0
offset_right = 323.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="AudioControl" type="Control" parent="PanelContainer/MarginContainer"]
layout_mode = 2
script = ExtResource("2_kai7g")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/AudioControl"]
layout_mode = 2
offset_left = 74.0
offset_top = 74.0
offset_right = 564.0
offset_bottom = 288.0
size_flags_vertical = 3

[node name="VolumeLabel" type="Label" parent="PanelContainer/MarginContainer/AudioControl/VBoxContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="Spacer2" type="Label" parent="PanelContainer/MarginContainer/AudioControl/VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/AudioControl/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Spacer" type="Label" parent="PanelContainer/MarginContainer/AudioControl/VBoxContainer"]
layout_mode = 2

[node name="Spacer3" type="Label" parent="PanelContainer/MarginContainer/AudioControl/VBoxContainer"]
layout_mode = 2

[node name="FullscreenLable" type="Label" parent="PanelContainer/MarginContainer/AudioControl/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"
horizontal_alignment = 1

[node name="CheckButton" type="CheckButton" parent="PanelContainer/MarginContainer/AudioControl/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Confirm" type="Button" parent="PanelContainer/MarginContainer/AudioControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -31.0
offset_right = -1.0
grow_horizontal = 0
grow_vertical = 0
text = "Apply"

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/AudioControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -31.0
offset_right = -80.0
grow_horizontal = 0
grow_vertical = 0
text = "Back
"

[connection signal="mouse_exited" from="PanelContainer/MarginContainer/AudioControl/VBoxContainer/HSlider" to="PanelContainer/MarginContainer/AudioControl" method="_on_h_slider_mouse_exited"]
[connection signal="toggled" from="PanelContainer/MarginContainer/AudioControl/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/AudioControl/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/AudioControl/Back" to="." method="_on_back_pressed"]
